--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
 
       - run:
           name: install dependencies
+          no_output_timeout: 20m
           command: |
             python3 -m venv venv
             . venv/bin/activate
